# credit_score

./: .flake8  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/.hooks/: pre-commit.json
backend/src/: app.py
backend/src/dtos/: cs1_model_predict_dto.py  cs2_model_predict_dto.py  features_dto.py  predict_request_dto.py
backend/src/ml_models/: bootstrap.py  exceptions.py
backend/src/ml_models/credit_score_1/: cs1_model.py  cs1_model.z  test_cs1_model.py
backend/src/ml_models/credit_score_2/: cs2_model.py  test_cs2_model.py
backend/src/routes/default_profiles/: default_profiles.py  response_schema.py  test_defaut_profiles_routes.py
backend/src/routes/predict/: predict.py  response_schema.py  test_predict.py
backend/src/service/: bootstrap.py
backend/src/service/aggregate_models_credit_score/: aggregate_models_credit_score.py  test_aggregate_models_credit_score.py
backend/src/service/calculate_cs1_credit_score/: calculate_cs1_credit_score.py  cs1_classification_score_enum.py  test_calculate_cs1_credit_score.py
backend/src/service/calculate_cs2_credit_score/: calculate_cs2_credit_score.py  cs2_classification_score_enum.py  test_calculate_cs2_credit_score.py
backend/src/service/calculate_models_credit_score_average/: calculate_models_credit_score_average.py  test_calculate_models_credit_score_average.py
backend/src/service/convert_brl_income_to_usd/: convert_brl_income_to_usd.py  test_convert_brl_income_to_usd.py
backend/src/service/cs1_model_score_calculator/: cs1_classification_score_enum.py  cs1_model_score_calculator.py  test_cs1_model_score_calculator.py
backend/src/service/cs2_model_score_calculator/: cs2_classification_score_enum.py  cs2_model_score_calculator.py  test_cs2_model_score_calculator.py
backend/src/service/generate_feature_relevance_map/: generate_feature_relevance_map.py  test_generate_feature_relevance_map.py
backend/src/service/get_default_profiles/: get_default_profiles.py  test_get_default_profiles.py
ml_scripts_eda/: .pre-commit-config.yaml  README.md  pyproject.toml  run_model_builds.sh  set_pythonpath.py
ml_scripts_eda/.hooks/: pre-commit.json
ml_scripts_eda/credit_score_1/: cs1_model_build.py  cs1_preprocessing.py  eda.ipynb  model_selection.ipynb  test_cs1_preprocessing.py
ml_scripts_eda/credit_score_2/: cs2_model_build.py  cs2_preprocessing.py  eda.ipynb  model_selection.ipynb  processing.py  test_cs2_preprocessing.py  test_processing.py
ml_scripts_eda/utils/: dataframe_treatment.py  test_dataframe_treatment.py
(+65 files in other folders)
