[tool.poetry]
name = "credit-score-backend"
version = "0.1.0"
description = "Backend for the credit score project"
authors = ["Gabriel Romao <gabriel-rgomes@hotmail.com>"]
readme = "README.md"
packages = [{include = "domain", from = "src"}]

[tool.poetry.dependencies]
python = "3.11.*"
pandas = "^2.2.2"
fastapi = "^0.111.0"
joblib = "^1.4.2"
pytest = "^8.2.2"
black = "^24.4.2"
flake8 = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
