[tool.poetry]
name = "ml_scripts_eda"
version = "0.1.0"
description = "A ML model that predicts the credit score and gives loan recommendation based on the client characteristics."
authors = ["Gabriel Romao <gabriel-rgomes@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "utils", from = "."}]

[tool.poetry.dependencies]
python = "3.11.*"
pandas = "^2.2.2"
pytest = "^8.2.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
joblib = "^1.4.2"
black = "^24.4.2"
flake8 = "^7.1.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
